# cjm-media-plugin-demucs

./: .gitignore  README.md  environment.yml  index.html  index.html.md  meta.html  meta.html.md  plugin.html  plugin.html.md  plugins_test.yaml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_media_plugin_demucs/: _modidx.py  meta.py  plugin.py
nbs/: index.ipynb  meta.ipynb  nbdev.yml  plugin.ipynb
tests_manual/: test_demucs_plugin.py  test_demucs_plugin_system.py
