[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-media-plugin-demucs"
dynamic = ["version"]
description = "Demucs v4 audio source separation plugin for the cjm-plugin-system that provides vocals extraction for removing background noise and music from speech audio."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['cjm_media_plugin_system', 'cjm-demucs-v4']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-media-plugin-demucs"
Documentation = "https://cj-mills.github.io/cjm-media-plugin-demucs"

[project.entry-points.nbdev]
cjm_media_plugin_demucs = "cjm_media_plugin_demucs._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_media_plugin_demucs.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_media_plugin_demucs"]

[tool.nbdev]
